connect to chatbot with https

--- a/miki.html
+++ b/miki.html
@@ -22,7 +22,7 @@ To start the MIKI chatbot click on the lower right chat icon.
     selector: "#webchat",
     initPayload: "/greet",
     customData: {"language": "de"}, // arbitrary custom data. Stay minimal as this will be added to the socket
-    socketUrl: "http://mikichatbot.ydns.eu",
+    socketUrl: "https://mikichatbot.ydns.eu",
     socketPath: "/socket.io/",
     title: "MIKI Chatbot",
     // subtitle: "Subtitle",
