--- a/miki.html
+++ b/miki.html
@@ -24,11 +24,11 @@ To start the MIKI chatbot click on the lower right chat icon.
       let delay = message.length * 10;
       if (delay > 1 * 1000) delay = 1 * 1000;
       if (delay < 800 / 3) delay = 800 / 3;
-      return delay;
+      return delay * 0;
     },
     initPayload: "/start",
     customData: {"language": "de"}, // arbitrary custom data. Stay minimal as this will be added to the socket
-    socketUrl: "https://mikichatbot.ydns.eu",
+    socketUrl: "https://bot.docloop.net",
     socketPath: "/socket.io/",
     title: "MIKI Chatbot",
     // subtitle: "Subtitle",
