--- a/miki.html
+++ b/miki.html
@@ -28,7 +28,8 @@ To start the MIKI chatbot click on the lower right chat icon.
     },
     initPayload: "/start",
     customData: {"language": "de"}, // arbitrary custom data. Stay minimal as this will be added to the socket
-    socketUrl: "https://mikichatbot.ydns.eu",
+    socketUrl: "https://34.80.193.41",
+    // socketUrl: "https://mikichatbot.ydns.eu",
     socketPath: "/socket.io/",
     title: "MIKI Chatbot",
     // subtitle: "Subtitle",
